[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/Pedido do cliente.png" type="Texture" id=1]
[ext_resource path="res://RandomCliente.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cliente.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Entrada"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/posicao/Cliente:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 303 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Saida"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/posicao/Cliente:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 303 ), Vector2( 0, 600 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 198.692, 245.582 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Entrada = SubResource( 1 )
anims/Saida = SubResource( 2 )

[node name="posicao" type="Node2D" parent="AnimationPlayer"]

[node name="Cliente" parent="AnimationPlayer/posicao" instance=ExtResource( 2 )]
position = Vector2( 0, 600 )
scale = Vector2( 0.5, 0.5 )
script = null

[node name="Pedido do cliente" type="Sprite" parent="AnimationPlayer/posicao/Cliente"]
position = Vector2( -72.0455, 26.3958 )
scale = Vector2( 1.76215, 1.76215 )
texture = ExtResource( 1 )

[node name="Pedido" type="Sprite" parent="AnimationPlayer/posicao/Cliente/Pedido do cliente"]
position = Vector2( 0, -20 )
scale = Vector2( 0.8, 0.8 )

[node name="Area2D" type="Area2D" parent="AnimationPlayer/posicao/Cliente"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimationPlayer/posicao/Cliente/Area2D"]
position = Vector2( 194.802, -70.1285 )
shape = SubResource( 3 )

[node name="Inatividade" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="Audio" type="AudioStreamPlayer" parent="."]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="AnimationPlayer/posicao/Cliente/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="AnimationPlayer/posicao/Cliente/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Inatividade" to="." method="_on_Inatividade_timeout"]
